@@ -4,3 +4,6 @@ Requires:
 Version: 3.1.3
 Libs:
 Cflags: -I/usr/include/$(ARCH)/arch-include-arch
+libdir=/usr/lib/$(ARCH)
+# no new line
+Libs: -L/usr/lib/$(ARCH)
