@@ -1,0 +1,6 @@
+Name: indep-include-arch-1
+Description: A library that include some arch dir
+Requires:
+Version: 3.1.3
+Libs:
+Cflags: -I/usr/include/$(ARCH)/indep-include-arch
