@@ -1,0 +1,7 @@
+Name: indep-include-arch-2
+Description: A library that include some arch dir
+Requires:
+Version: 3.1.3
+Libs:
+# no new line at end
+Cflags: -I/usr/include/$(ARCH)
