@@ -1,6 +1,6 @@
-Name: indep-include-arch
+Name: indep-include-arch-2
 Description: A library that include some arch dir
 Requires:
 Version: 3.1.3
 Libs:
-Cflags: -I/usr/include/$(ARCH)/indep-include-arch
+Cflags: -I/usr/include/$(ARCH) -I/usr/include
