@@ -10,6 +10,9 @@ lintian (2.5.26) UNRELEASED; urgency=medium
     + [BR] Fix another false positive for gfdl invariants in
       php-elisp.
     + [BR] Detect old path for upstream metadata.
+  * checks/files.pm:
+    + [BR] Fix false positive in detection of cross arch pkgconfig.
+      (Closes: #755902).
   * checks/changes-file.{desc,pm}:
     + [BR] Add patch from Ivo De Decker, add check for
       backports changes file.  (Closes: #732225).
